<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:id="@+id/id_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/id_user"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/pw_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/pwck_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_ck"
        android:inputType="textPassword"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/weight_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/weight"
        android:textAlignment="center"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/tall_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/tall"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/hope_join_txtB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/hope"
        android:textAlignment="center" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:layout_marginBottom="3dp"
        android:padding="2dp">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/join_cancel_btn"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/join_text"
            android:textAlignment="center"
            android:textSize="12sp" />

        <Button
            android:id="@+id/join_ok_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/join"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Button
            android:id="@+id/join_cancel_btn"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:text="@string/cancel"
            android:textAlignment="center"
            android:textSize="18sp" />

    </RelativeLayout>

</LinearLayout>