<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.leebeomwoo.viewbody_final.QnA.WriteFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/textView3"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/qna_write_title"
        android:layout_alignParentStart="true"
        android:id="@+id/textView3"
        android:layout_above="@+id/textView2"
        android:layout_toStartOf="@+id/qna_write_title" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/sempletitle"
        android:ems="10"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView"
        android:textAlignment="center"
        android:id="@+id/qna_write_title" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:ems="10"
        android:id="@+id/qna_write_password"
        android:textAlignment="center"
        android:layout_below="@+id/qna_write_writer"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView3" />

    <TextView
        android:text="@string/writer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/qna_write_password"
        android:layout_below="@+id/textView3" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name"
        android:ems="10"
        android:id="@+id/qna_write_writer"
        android:textAlignment="center"
        android:layout_below="@+id/qna_write_title"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:text="@string/content"
        android:layout_width="wrap_content"
        android:id="@+id/textView2"
        android:layout_height="30dp"
        android:textAlignment="center"
        android:layout_below="@+id/qna_write_password"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/qna_write_txtB"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:gravity="top|left"
        android:hint="@string/qnawriteexample"
        tools:ignore="RtlHardcoded" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qna_write_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qna_write_camera"
        android:layout_alignStart="@+id/qna_write_camera"
        android:background="@color/nocolor"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_gallery"
        android:visibility="invisible"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qna_write_camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/qna_write_add"
        android:layout_alignStart="@+id/qna_write_add"
        android:layout_marginStart="8dp"
        android:background="@color/nocolor"
        android:clickable="true"
        android:src="@android:drawable/ic_menu_camera"
        android:visibility="invisible"
        app:fabSize="mini" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qna_write_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@drawable/plus" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qna_write_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/qna_write_main"
        android:layout_toStartOf="@+id/qna_write_main"
        android:clickable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@drawable/close" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/qna_write_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/qna_write_add"
        android:layout_marginBottom="7dp"
        android:layout_toStartOf="@+id/qna_write_add"
        android:clickable="true"
        android:visibility="invisible"
        app:fabSize="mini"
        app:srcCompat="@android:drawable/ic_menu_edit" />

</RelativeLayout>
