<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/association_txtB"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/association_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/name_txtB"
        android:layout_width="wrap_content"
        android:layout_height="25dp"
        android:layout_below="@+id/association_txtB"
        android:layout_toLeftOf="@+id/check_lbl"
        android:layout_toRightOf="@+id/nick_lbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <ImageView
        android:id="@+id/check_B"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/association_txtB"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/nick_lbl"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_below="@+id/association_lbl"
        android:text="@string/nicname"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/association_lbl"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:text="@string/Associaition"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/check_lbl"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_below="@+id/association_txtB"
        android:layout_toStartOf="@+id/check_B"
        android:text="@string/licencecheck"
        android:textAlignment="viewEnd" />
</RelativeLayout>
</android.support.v7.widget.CardView>