<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/followCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:orientation="vertical">

    <cn.gavinliu.android.lib.scale.ScaleLinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<cn.gavinliu.android.lib.scale.ScaleRelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/followtitle_image"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:background="@drawable/follow_title_back"
        app:srcCompat="@drawable/logomain"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/follow_Title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_toEndOf="@+id/followtitle_image"
        android:paddingStart="15dp"
        android:paddingEnd="5dp"
        android:textSize="22sp"
        android:textStyle="bold" /></cn.gavinliu.android.lib.scale.ScaleRelativeLayout>

        <WebView
            android:id="@+id/list_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="WebViewLayout" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="3dp">

            <TextView
                android:id="@+id/follow_Id"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/follow_Id_lbl" />

            <Button
                android:id="@+id/follow_Btn"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:text="@string/follow_media" />

            <TextView
                android:id="@+id/follow_Id_lbl"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:paddingStart="3dp"
                android:text="@string/nickname"
                android:textAlignment="center"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/follow_Like"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/follow_Btn"
                android:text="@string/like" />
        </RelativeLayout>

    </cn.gavinliu.android.lib.scale.ScaleLinearLayout>
</android.support.v7.widget.CardView>